@@ -30,6 +30,8 @@ ViSP 2.6.3 (under development)
               points in plane oX=d or oY=d
     - [14863] vpPose::poseRansac() can fail during Lagrange pose estimation
     - [14993] Segfault in mbtTracker example when only the cube is tracked
+    - [15049] In vpFeatureSegment, bad interaction matrix associated to
+              alpha angle
 
 ----------------------------------------------
 ViSP 2.6.2 (released July 15, 2012)
